--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     let scanning = false;
 
     // Replace this URL with your GitHub-hosted JSON
-    const JSON_URL = "https://github.com/swordeye2/PTTFTracker/blob/main/umpires.json";
+    const JSON_URL = "https://raw.githubusercontent.com/swordeye2/PTTFTracker/main/umpires.json";
 
     let umpireData = [];
 
