--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   </div>
 
   <div id="id-card">
-    <img id="id-photo" src="images/id_placeholder.png" alt="ID Photo">
+    <img id="id-photo" src="images/1placeholder.png" alt="ID Photo">
     <div class="info" id="surname">Surname: -</div>
     <div class="info" id="givenName">Given Name: -</div>
     <div class="info" id="middleName">Middle Name: -</div>
