--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <button id="start-scan">Start QR Scan</button>
 
   <div id="reader">
-    <img id="id-placeholder" src="images/id_placeholder.png" alt="Waiting for scan..." style="width:100%; height:100%; object-fit:contain;">
+    <img id="id-placeholder" src="images/QR.png" alt="Waiting for scan..." style="width:100%; height:100%; object-fit:contain;">
   </div>
 
   <div id="id-card">
