--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
       justify-content: center;
     }
 
-    #id-card {
-      width: 450px;
-      border: 2px solid #333;
-      border-radius: 10px;
-      background: white;
-      padding: 20px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      text-align: center;
-    }
+  #id-card {
+    width: 450px;
+    border: 2px solid #333;
+    border-radius: 10px;
+    background: white;
+    padding: 20px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    text-align: left; /* This makes all the text flush left */
+  }
 
     #id-photo {
       width: 180px;
