--- a/index.html
+++ b/index.html
@@ -5,16 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PTTF Umpire Verifier</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      background: url('images/background.png') center/cover no-repeat fixed;
-      min-height: 100vh;
-      margin: 0;
-    }
+body {
+  font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  min-height: 100vh;
+  color: #111;
+
+  /* Background image */
+  background-image: url('images/background.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
+  /* Default size for large screens */
+  background-size: 80% auto;
+}
+
+/* Adjust for medium screens (tablets) */
+@media (max-width: 1024px) {
+  body {
+    background-size: 90% auto;
+  }
+}
+
+/* Adjust for small screens (mobile) */
+@media (max-width: 480px) {
+  body {
+    background-size: 100% auto; /* fill width while keeping aspect ratio */
+  }
+}
 
     #reader {
       width: 400px;
